add preview features to tests